IntrospectingContextMenu now builds context menu dynamically based on actual class of row and on static type.