@@ -6,48 +6,50 @@ import javafx.scene.control.MenuItem;
 import lombok.AccessLevel;
 import lombok.Data;
 import lombok.Getter;
-import lombok.NonNull;
+import lombok.Synchronized;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang.StringUtils;
 
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
-/**
- * Base class for implementing a {@link ContextMenu} that is built dynamically by introspecting a target class.
- * The menu can be attached to any Node using {@link javafx.scene.Node#setOnContextMenuRequested} and contextualized
- * using {@link #contexualizeMenu}
- *
- * @see MethodMenuItem
- * @param <T>
- */
+@Slf4j
 @Data
-public abstract class IntrospectingContextMenu<T> {
-    @NonNull
-    private final Class<? extends T> itemClass;
+public class IntrospectingContextMenu<T> {
+
+    @Getter(AccessLevel.NONE)
+    private final Map<T, ContextMenu> MENU_CACHE = new HashMap<>();
 
     private final Object evaluationContextRoot;
 
-    @Getter(lazy = true, value = AccessLevel.PRIVATE)
-    private final List<Method> methods = computeRelevantMethods();
+    protected ContextMenu getContextMenu(T item) {
+        return MENU_CACHE.computeIfAbsent(item, t -> {
+            MenuItem[] menuItems = buildMenuItems(item.getClass());
+            ContextMenu contextMenu = new ContextMenu(menuItems);
+            contexualizeMenu(contextMenu, item);
+            return contextMenu;
+        });
+    }
 
-    protected MenuItem[] buildMenuItems(Object tableView) {
-        return getMethods().stream()
-                .map(method -> buildMenuItem(method, tableView))
+    protected MenuItem[] buildMenuItems(Class<?> aClass) {
+        return computeRelevantMethods(aClass).stream()
+                .map(this::buildMenuItem)
                 .toArray(MenuItem[]::new);
     }
 
-    private List<Method> computeRelevantMethods() {
-        return Arrays.stream(itemClass.getDeclaredMethods())
+    private List<Method> computeRelevantMethods(Class<?> aClass) {
+        return Arrays.stream(aClass.getDeclaredMethods())
                 // skip if method is an Object method
                 .filter(this::isNotObjectMethod)
                 // skip non public or abstract methods
                 .filter(method -> Modifier.isPublic(method.getModifiers()) && !Modifier.isAbstract(method.getModifiers()))
                 // skip setters/getters
                 .filter(method -> !method.getName().startsWith("set") && !method.getName().startsWith("get") && !method.getName().startsWith("is"))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isNotObjectMethod(Method method) {
@@ -59,10 +61,10 @@ public abstract class IntrospectingContextMenu<T> {
         }
     }
 
-    private MenuItem buildMenuItem(Method method, Object evalContextRoot) {
+    private MenuItem buildMenuItem(Method method) {
         ForEach forEach = method.getAnnotation(ForEach.class);
         if (forEach != null) {
-            return new ForEachMenuItem<T>(evalContextRoot, forEach, method);
+            return new ForEachMenuItem<T>(evaluationContextRoot, forEach, method);
         }
 
         //TODO allow the use of @Value on methods that are not annotated with @ForEach
@@ -80,15 +82,20 @@ public abstract class IntrospectingContextMenu<T> {
         return new MethodMenuItem<>(evaluationContextRoot, text, method, null);
     }
 
-    /** Customize the menu for the current row item by calling {@link Contextualizable#contextualize(Object)} on
+    /**
+     * Customize the menu for the current row item by calling {@link Contextualizable#contextualize(Object)} on
      * all {@link MenuItem}s that implement {@link Contextualizable}, passing it the current orw item.
      */
+    @Synchronized
     protected void contexualizeMenu(ContextMenu contextMenu, T item) {
+        if (contextMenu == null) {
+            return;
+        }
+        log.debug("Contextualizing menu for {}", item);
         contextMenu.getItems().stream()
                 .filter(Contextualizable.class::isInstance)
                 .map(menuItem -> (Contextualizable<T>) menuItem)
                 .forEach(contextualizable -> contextualizable.contextualize(item));
 
     }
-
 }
